--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header") -%>
 <h1>Compose</h1>
 <form action="/compose" method="post">
-    <textarea name="text"></textarea><br />
+    <textarea type="text" name="postTitle"></textarea><br/>
     <button type="submit" name="button">Publish</button>
 </form>
 <%- include("partials/footer") -%>
