--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,7 +1,15 @@
 <%- include("partials/header") -%>
 <h1>Compose</h1>
 <form action="/compose" method="post">
-    <textarea type="text" name="postTitle"></textarea><br/>
-    <button type="submit" name="button">Publish</button>
+    <div class="form-group">
+        <label for="postTitle">Title</label>
+        <input type="text" name="postTitle" class="form-control" id="postTitle" placeholder="Title">
+        </div>
+        <div class="form-group">
+        <label for="postBody">Body</label>
+        <textarea type="text" name="postBody" class="form-control" id="postBody" rows="5" cols="30"></textarea>
+        </div>
+        <button type="submit" name="button" class="btn btn-primary">Publish</button>
 </form>
 <%- include("partials/footer") -%>
+
