--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,11 @@
 <%- include("partials/header") -%>
 <h1>Home</h1>
 <p> <%= homeStartingContent %></p>
+<div class="posts">
+  <% posts.forEach(function(post){ %>
+    <div class="post">
+      <h1><%= post.title %></h1>
+      <p><%= post.body %></p>
+    </div>
+  <% }) %>
 <%- include("partials/footer") -%>
