--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,8 @@
   <% posts.forEach(function(post){ %>
     <div class="post">
       <h1><%= post.title %></h1>
-      <p><%= post.body %></p>
+      <p><%= post.content %></p>
     </div>
   <% }) %>
+</div>
 <%- include("partials/footer") -%>
