--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,8 +4,10 @@
 <div class="posts">
   <% posts.forEach(function(post){ %>
     <div class="post">
-      <h1><%= post.title %></h1>
-      <p><%= post.content %></p>
+        <h1><%= post.title %></h1>
+        <p><%= post.content.substring(0, 100) + " ..."%>
+            <a href="/posts/<%=post.title%>" >Read More...</a>
+        </p>
     </div>
   <% }) %>
 </div>
